--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,22 @@
 ---
 layout: page
-title: 'Tag Index'
+title: 'Navigation'
+permalink: 'search'
 ---
+
+<script>
+  (function() {
+    var cx = '003161401057412706846:hleib8jq-ak';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+
 
 {%- capture site_tags -%}
     {%- for tag in site.tags -%}
