--- a/tags.html
+++ b/tags.html
@@ -1,9 +1,7 @@
 ---
 layout: page
-title: 'Navigation'
-permalink: 'search'
+title: 'Tag Index'
 ---
-
 <script>
   (function() {
     var cx = '003161401057412706846:hleib8jq-ak';
@@ -16,6 +14,7 @@ permalink: 'search'
   })();
 </script>
 <gcse:search></gcse:search>
+
 
 
 {%- capture site_tags -%}
